
                      (c)2001,2002 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

                  ngIRCd ist freie Software und steht unter
                       der GNU General Public License.

                        -- ChangeLog / Aenderungen --


ngIRCd CVS-HEAD

  - in RPL_YOURHOST_MSG wurde ein fehlerhafter Versionsstring geliefert.
  - Test-Suite: es werden nun nur noch 5 Sessions parallel gestartet.

ngIRCd 0.5.0

  - Dokumentation aktualisiert.
  - Fehler bei Validierung von "AdminInfo2" behoben.
  - Test der Flags fuer "ps" in der Testsuite verbessert, ist nun zu mehr
    Plattformen kompatibler.

  ngIRCd 0.5.0-pre2, 17.09.2002:
  - Fix in IRC_WriteStrServersPrefix() war "badly broken" -- behoben.

  ngIRCd 0.5.0-pre1, 16.09.2002:
  - Manual-Pages ngircd.8 und ngircd.conf.5 begonnen.
  - Wird der Netzwerk-Sniffer aktiviert (--sniffer), so schaltet der
    ngIRCd nun automatisch in den Debug-Modus.
  - auf Systemen, die inet_aton() nicht kennen (wie z.B. A/UX), kann der
    ngIRCd nun dennoch auch aktiv Server-Links aufbauen.
  - h_errno wird auf Systemen, die das nicht kennen (wie z.B. HP-UX 10.20)
    nicht mehr verwendet. Somit compiliert der ngIRCd nun auch dort :-)
  - um auf dem Ziel-System nicht vorhandene Funktionen nachzubilden wird nun
    die "libngportab" erzeugt; genutzt wird dies bisher fuer vsnprintf().
    Nun compiliert der ngIRCd auch unter Solaris 2.5.1.
  - "persistente Channels" (Mode 'P') implementiert: diese koennen in der
    Konfigurationsdatei definiert werden (Sektion "Channel", vgl. Beispiel-
    Konfiguration "sample-ngircd.conf") und bleiben auch dann bestehen,
    wenn kein User mehr im Channel ist. Zu Channel-Operatoren werden bisher
    nur IRC-Operatoren, die den Channel betreten. Die persistenten Channels
    werden durch das Flag "P" gelennzeichnet, welches normal durch Channel-
    Op's gesetzt und geloescht werden kann.